--- a/back/package.json
+++ b/back/package.json
@@ -8,6 +8,8 @@
     "build": "tsc && tsc-alias",
     "start": "node dist/main.js",
     "migrate:prod": "node dist/db/drizzle/migrate.js",
+    "process:files": "ts-node src/lib/files/processFiles.ts",
+    "process:files:prod": "node dist/lib/files/processFiles.js",
     "seed:prod": "node dist/db/drizzle/seed.js",
     "dev": "ts-node-dev -r tsconfig-paths/register --files ./src/main.ts",
     "generate": "drizzle-kit generate --config=src/db/drizzle/drizzle.config.ts",
@@ -25,43 +27,29 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "aws-sdk": "2.1691.0",
-    "bcrypt": "5.1.1",
     "cookie-parser": "1.4.6",
     "cors": "2.8.5",
+    "csv-parser": "^3.2.0",
     "dotenv": "16.3.1",
     "drizzle-orm": "0.31.0",
     "express": "4.21.2",
-    "jsonwebtoken": "9.0.1",
     "morgan": "1.10.0",
     "multer": "1.4.5-lts.1",
-    "name": "0.0.2",
-    "nodemailer": "6.9.15",
-    "nodemailer-express-handlebars": "7.0.0",
     "pg": "8.12.0",
     "postgres": "3.3.5",
-    "redis": "4.7.0",
-    "sharp": "0.33.5",
     "swagger-ui-express": "5.0.1",
-    "uuid": "10.0.0",
     "winston": "3.10.0",
     "zod": "3.22.2"
   },
   "devDependencies": {
     "@siberiacancode/eslint": "^2.7.0",
     "@siberiacancode/prettier": "^1.2.0",
-    "@types/bcrypt": "5.0.2",
-    "@types/cookie-parser": "1.4.7",
     "@types/cors": "2.8.13",
     "@types/express": "5.0.0",
-    "@types/jest": "^29.5.14",
-    "@types/jsonwebtoken": "9.0.2",
     "@types/morgan": "1.9.9",
     "@types/multer": "1.4.12",
     "@types/node": "18.17.11",
     "@types/pg": "8.11.6",
-    "@types/redis": "4.0.11",
-    "@types/uuid": "10.0.0",
     "drizzle-kit": "0.22.0",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
