--- a/front/.prettierrc
+++ b/front/.prettierrc
@@ -8,12 +8,7 @@
   "useTabs": false,
   "endOfLine": "lf",
   "arrowParens": "always",
-  "importOrder": [
-    "^(react|react-dom|react-router|@xyflow/react)",
-    "<THIRD_PARTY_MODULES>",
-    "^@/(.*)$",
-    "^[./]"
-  ],
+  "importOrder": ["<THIRD_PARTY_MODULES>", "^@/(.*)$", "^[./]"],
   "importOrderSeparation": true,
   "importOrderGroupNamespaceSpecifiers": true,
   "importOrderSortSpecifiers": true,
