--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "elkjs": "^0.11.0",
     "mantine-datatable": "^8.3.8",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -25,12 +26,12 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@eslint-react/eslint-plugin": "^2.3.7",
     "@trivago/prettier-plugin-sort-imports": "^6.0.0",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
-    "@eslint-react/eslint-plugin": "^2.3.7",
     "babel-plugin-react-compiler": "^1.0.0",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
