--- a/.github/workflows/server-cd.yaml
+++ b/.github/workflows/server-cd.yaml
@@ -111,8 +111,8 @@ jobs:
               docker compose pull
               docker compose up -d
             else
-              docker compose pull express-app
-              docker compose up -d --no-deps express-app
+              docker compose pull server
+              docker compose up -d --no-deps server
             fi
             
             docker system prune -f -a
